--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,9 @@
     border: none;
     background: transparent;
   }
+
+  .boxshadow{
+    /* box-shadow: rgb(212, 152, 33) 0px 20px 30px -10px; */
+    box-shadow: rgb(212, 152, 33) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    
+  }
