--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'CustomFont'; 
+  src: url('../app/ui/fonts/GothamRnd-Medium.otf'); 
+}
+@font-face {
+  font-family: 'CustomFontLight'; 
+  src: url('../app/ui/fonts/GothamRnd-Light.otf'); 
+}
+
+*{
+  font-family: CustomFontLight;
+}
+
 .box {
     width: 140px;
     height: auto;
