add skeleton home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,5 +110,11 @@
     background-size: 115%;
     background-repeat:no-repeat ;
     
+    
+  }
+  .bglog{
+    background-image: url(../../public/img/circuit.png);
+    background-position:  center;
+    
   }
  
