--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,10 +85,15 @@
   }
 
   .boxshadow{
-    /* box-shadow: rgb(212, 152, 33) 0px 20px 30px -10px; */
     box-shadow: rgb(212, 152, 33) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     
   }
+  .boxshadowlog{
+    box-shadow: 0px 0px 30px 7px rgba(212,152,33,0.75);
+    -webkit-box-shadow: 0px 0px 30px 7px rgba(212,152,33,0.75);
+    -moz-box-shadow: 0px 0px 30px 7px rgba(212,152,33,0.75);
+  }
+
   .bgdetail{
     background-image: url(./../../public/img/vecteezy.jpg);
     background-position: center;
