--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,17 +141,20 @@
   .slider{
     height: 200px;
     overflow: hidden;
-    position: relative;
+    /* position: relative; */
     padding-top: 10px;
+    z-index: 0;
   }
   .slide-track{
     animation: scroll 40s linear infinite;
     display: flex;
     width: calc(250px*16);
+    z-index: 0;
   }
   .slide{
     height: 200px;
     width: 250px;
+    z-index: 0;
     
 
   
