--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,7 +140,7 @@
 
   .slider{
     height: 200px;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* position: relative; */
     padding-top: 10px;
     
@@ -154,9 +154,5 @@
   .slide{
     height: 200px;
     width: 250px;
-    
-    
-
-  
   }
-  
+ 
