add fixed on bg card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,7 +102,7 @@
   }
   .bgnoborder{
     background-image: url(./../../public/img/vecteezynoborder.jpg);
-    background-position: center;
+    background-position: fixed;
     /* background-size: cover;
     background-repeat: no-repeat; */
   }
