--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,8 @@
   font-family: CustomFontLight;
 }
 
+/* btn nav start  */
+
 .box {
     width: 140px;
     height: auto;
@@ -83,7 +85,7 @@
     border: none;
     background: transparent;
   }
-
+ /* btn nav end  */
   .boxshadow{
     box-shadow: rgb(212, 152, 33) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     
